--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Importer les polices */
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Legend', sans-serif;
     color: #333;
     background-color: #f4f4f4;
 }
