--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Applique l'image d'arrière-plan */
 body.homepage {
-    background-image: url('images/extracted_background.webp'); /* Mets le chemin exact vers ton image ici */
+    background-image: url('C:\Users\marti\OneDrive\Documents\Projets\Le bois d'la Yaute\Image\extracted_background.webp'); /* Mets le chemin exact vers ton image ici */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
